# rcc

./: Cargo.toml  LICENSE
src/: backend.rs  common.rs  driver.rs  frontend.rs  lib.rs  main.rs  mir.rs
src/backend/: error.rs  isa.rs  lowering.rs  object.rs  symbols.rs
src/common/: config.rs  scope.rs  span.rs  symbol_table.rs  token.rs
src/driver/: cli.rs  pipeline.rs  pipline.rs
src/frontend/: lexer.rs
src/frontend/parser/: ast.rs  diagnostic.rs  labels.rs  parse.rs  tests.rs  typedefs.rs
src/frontend/parser/tests/: control_flow.rs  declarations.rs  functions.rs  mod.rs  type_name.rs  typedef_scope.rs
src/frontend/sema/: const_eval.rs  context.rs  diagnostic.rs  init.rs  symbols.rs  typed_ast.rs  types.rs
src/frontend/sema/check/: decl.rs  expr.rs  stmt.rs
src/frontend/sema/tests/: control_flow.rs  declarations.rs  functions.rs  initializers.rs  mod.rs
src/mir/: builder.rs  display.rs  ir.rs  optimization.rs  passes.rs
