[package]
name = "rcc"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["pratt"] }
clap = { version = "4.5.60", features = ["derive"] }
cranelift-codegen = "0.129.1"
cranelift-frontend = "0.129.1"
cranelift-module = "0.129.1"
cranelift-object = "0.129.1"
target-lexicon = "0.13.5"
